# sensor-data-logger

./: .gitignore  CMakeLists.txt  README.md  sensor_log.csv  test_mock_sensor  test_sensor_logger
docs/: CPPCheckWarnings.md
include/mock_sensor/: mock_sensor.h
include/sensor_logger/: sensor_logger.h
scripts/: build.sh  manage.sh  run_tests.sh  static_analysis.sh
src/: main.c  mock_sensor.c  sensor_logger.c
tests/: test_mock_sensor.c  test_sensor_logger.c
tests/unity/: CMakeLists.txt
